@startuml
'
' Detailed per-file layout for horizontal subdiagram renders.
!theme mars
scale max 1024*768
left to right direction
skinparam linetype ortho
skinparam shadowing false
skinparam roundCorner 6
skinparam ranksep 80
skinparam nodesep 50
skinparam padding 6
skinparam WrapWidth 520
skinparam DefaultFontSize 12
skinparam ClassFontSize 13
skinparam ClassAttributeFontSize 11
skinparam ClassStereotypeFontSize 10
skinparam ArrowFontSize 10
skinparam classAttributeIconSize 0
hide empty members
class GeminiService <<sealed>> {
    - <<const>> ChatServiceId : string = "wikigraph-chat"
    - <<const>> EmbeddingServiceId : string = "wikigraph-embeddings"
    - <<readonly>> _chatCompletionService : IChatCompletionService?
    - <<readonly>> _embeddingGenerator : IEmbeddingGenerator<string, Embedding<float>>?
    + GeminiService(options:IOptions<GeminiOptions>, logger:ILogger<GeminiService>)
    + GeminiService(serviceProvider:IServiceProvider, options:IOptions<GeminiOptions>, logger:ILogger<GeminiService>)
    + <<async>> GenerateReplyAsync(prompt:string, article:WikiArticle, sessionHistory:IReadOnlyList<MessageDto>, matches:IReadOnlyList<WikiMatch>, cancellationToken:CancellationToken) : Task<GeminiReply>
    + <<async>> CreateEmbeddingAsync(text:string, cancellationToken:CancellationToken) : Task<float[]?>
    + <<async>> PlanWikipediaLookupAsync(prompt:string, wikipediaUrl:string?, sessionHistory:IReadOnlyList<MessageDto>, cancellationToken:CancellationToken) : Task<WikiLookupPlan>
    - {static} BuildLookupPlanningHistory(prompt:string, wikipediaUrl:string?, sessionHistory:IReadOnlyList<MessageDto>) : ChatHistory
    - {static} ReadLookupPlan(responseText:string?, fallback:WikiLookupPlan) : WikiLookupPlan
    - {static} BuildFallbackLookupPlan(prompt:string) : WikiLookupPlan
    - {static} BuildChatHistory(prompt:string, article:WikiArticle, sessionHistory:IReadOnlyList<MessageDto>, matches:IReadOnlyList<WikiMatch>) : ChatHistory
    - {static} BuildFallbackReply(prompt:string, article:WikiArticle, sessionHistory:IReadOnlyList<MessageDto>, matches:IReadOnlyList<WikiMatch>) : GeminiReply
    - {static} ReadReply(responseText:string?, article:WikiArticle, prompt:string, matches:IReadOnlyList<WikiMatch>) : GeminiReply?
    - {static} TryParseReply(text:string, prompt:string, article:WikiArticle, matches:IReadOnlyList<WikiMatch>) : GeminiReply?
    - {static} ReadStringArray(root:JsonElement, propertyName:string) : IReadOnlyList<string>
    - {static} BuildFallbackTopics(prompt:string, article:WikiArticle, matches:IReadOnlyList<WikiMatch>) : IReadOnlyList<string>
    - {static} StripCodeFence(text:string) : string
    - {static} ReadGeneratedText(json:string) : string?
}
class GeminiReply <<sealed>> <<record>> {
    + Answer : string <<get>> <<init>>
}
class "ILogger`1"<T> {
}
class "IReadOnlyList`1"<T> {
}
GeminiService --> "_options" GeminiOptions
GeminiService --> "_logger<GeminiService>" "ILogger`1"
GeminiReply --> "RelatedTopics<string>" "IReadOnlyList`1"
GeminiReply --> "SupportingTopics<string>" "IReadOnlyList`1"
@enduml
